--- a/harbour-lights/src/components/HeroSection/HeroSection.css
+++ b/harbour-lights/src/components/HeroSection/HeroSection.css
@@ -1,7 +1,7 @@
 .hero-container {
     position: relative;
     width: 100%;
-    height: 700px; /* Adjust height as needed */
+    height: 700px; 
   }
   
   .hero-image {
@@ -13,16 +13,24 @@
   .logo {
     position: absolute;
     top: 10%;
-    left: 16%;
+    left: 14%;
     transform: translate(-50%, -50%);
  
   }
   .headerContent {
     position: absolute;
     top: 40%;
-    left: 20%;
-    transform: translate(-20%, -30%);
- 
+    left: 25%;
+    transform: translate(-50%, -50%);
+   
+  }
+
+  .headerBox {
+    position: absolute;
+    top: 40%;
+    left: 80%;
+    transform: translate(-50%, -50%);
+   
   }
 
   
