Modify. Header Sectionto correct allignment

--- a/harbour-lights/src/components/HeroSection/HeroSection.css
+++ b/harbour-lights/src/components/HeroSection/HeroSection.css
@@ -10,30 +10,70 @@
     object-fit: cover; 
   }
   
-  .logo {
+  
+  
+
+
+  
+
+  @media only screen and (min-width: 601px) {
+    .headerBox {
+      position: absolute;
+      top: 40%;
+      left: 77%;
+      transform: translate(-50%, -50%);
+     
+      
+    }
+    .headerContent {
+      position: absolute;
+      top: 40%;
+      left: 25%;
+      transform: translate(-50%, -50%);
+     
+    }
+    .headerImage {
+      width: 498px;
+      height: 217px;
+    }
+    .logo {
+      position: absolute;
+      top: 10%;
+      left: 14%;
+      transform: translate(-50%, -50%);
+   
+    }
+}
+
+@media screen and (max-width: 600px) {
+  .headerBox {
     position: absolute;
-    top: 10%;
-    left: 14%;
+    top: 77%;
+    left: 50%;
     transform: translate(-50%, -50%);
- 
+   
   }
   .headerContent {
     position: absolute;
     top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+   
+  }
+
+  .headerImage {
+    width: 319px;
+    height: 144px;
+  }
+  .logo {
+    position: absolute;
+    top: 10%;
     left: 25%;
     transform: translate(-50%, -50%);
-   
+ 
   }
-
-  .headerBox {
-    position: absolute;
-    top: 40%;
-    left: 80%;
-    transform: translate(-50%, -50%);
-   
-  }
-
   
+}
   .text-field {
     margin-bottom: 16px; /* Adjust spacing between TextField and Button */
   }
