--- a/harbour-lights/src/components/HeroSection/HeaderBox.css
+++ b/harbour-lights/src/components/HeroSection/HeaderBox.css
@@ -1,13 +1,20 @@
 .smallFont {
   font-size: 13px;
 }
-.footer {
+.boxFooter {
   margin-top: 10px;
   border-top: 2px solid grey;
   font-size: 13px;
   color: lightblue;
+  
 }
 .box {
-  width: 400px;
-  height: 400px;
+  display: flex;
+  flex-direction: column;
+  width: 250px;
+  height: 300px;
+  border-radius: 5px ;
+  color: white;
+   backdrop-filter: blur(8px);
+   align-items:center ;
 }
